# nightingale

./: .gitignore  app.py  commands.py  extensions.py  meta_info.json  models.py  pyproject.toml
__context__/: meta_info.json  project_pages.json  project_requirement.md  project_startup_script.sh  project_structure.md
routes/: views.py
static/js/: gallery.js  home.js  impact.js  main.js  quotes.js  timeline.js
templates/: base.html  gallery.html  impact.html  index.html  quotes.html  timeline.html
