[tool.poetry]
name = "florence-nightingale"
version = "0.1.0"
description = "A website about Florence Nightingale"
authors = ["CodeDancer <codedancer@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.0"
flask-cors = "^3.0.0"
werkzeug = "^3.1.0"
flask-login = "^0.6.0"
flask-migrate = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"